x86_32 fails gtest:power_of_2

XMLWordPrintable

    • b11
    • Verified

      $ CONF=linux-x86-server-fastdebug make images run-test TEST=gtest:power_of_2

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/utilities/powerOfTwo.hpp:76), pid=20756, tid=20756
      # assert(lz > 1) failed: Will overflow

      V [libjvm.so+0x16d476f] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x3cf
      V [libjvm.so+0x16d5632] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, char*)+0x32
      V [libjvm.so+0xa215a3] report_vm_error(char const*, int, char const*, char const*, ...)+0x93
      V [libjvm.so+0x3e573d] EnableIf<IsSigned<long long>::value, long long>::type round_up_power_of_2<long long>(long long) [clone .part.27]+0xed
      V [libjvm.so+0x3e808c] void round_up_power_of_2<long long>()+0x45c
      V [libjvm.so+0x3e78ea] power_of_2_round_up_power_of_2_test_Test::TestBody()+0x1a
      V [libjvm.so+0x26a1cc] testing::Test::Run()+0xbc
      V [libjvm.so+0x26a331] testing::TestInfo::Run()+0x121
      V [libjvm.so+0x26a40a] testing::TestCase::Run()+0xaa
      V [libjvm.so+0x278308] testing::internal::UnitTestImpl::RunAllTests()+0x458
      V [libjvm.so+0x27843c] testing::UnitTest::Run()+0x5c
      V [libjvm.so+0x280b27] runUnitTestsInner(int, char**)+0x297
      V [libjvm.so+0x280ddf] runUnitTests+0xdf
      C [gtestLauncher+0x608] main+0x2b

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: