8238909: x86_32 fails gtest:power_of_2

Reviewed-by: stefank, redestad